--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "jp.nakayama.firechat"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -17,11 +17,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE-FIREBASE.txt'
+        exclude 'META-INF/NOTICE'
+    }
 }
+
+repositories {
+    //maven { url 'http://raw.github.com/bassaer/ChatMessageView/master/repository' }
+}
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+    compile 'com.firebase:firebase-client-android:2.5.2+'
+    compile 'com.google.firebase:firebase-core:9.2.1'
+    //compile 'com.google.firebase:firebase-core:9.4.0'
+    compile 'co.devcenter.square:android-ui-library:0.1'
+    //compile 'jp.bassaer.chatmessageview:chatmessageview:1.0.0'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
